--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Beers_</a>
+            <a class="navbar-brand" href="/">Beers_</a>
             <button class="navbar-toggler light" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -23,13 +23,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Beers</a>
+                        <a class="nav-link active" aria-current="page" href="/beers">Beers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Random Beer</a>
+                        <a class="nav-link active" aria-current="page" href="/random-beer">Random Beer</a>
                     </li>
                 </ul>
             </div>
