--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,6 +35,11 @@
             </div>
         </div>
     </nav>
+    <footer class="footer fixed-bottom bg-info">
+        <div class="container-fluid d-flex justify-content-center">
+            <span>&copy; 2022 Abel Andrés</span>
+        </div>
+    </footer>
     <main>
         {{{body}}}
     </main>
