✨ add home view

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,11 @@
-<div>
-    Home
+<div class="container home">
+    <div class="row justify-content-center">
+        <div class="home-beer col-6">
+            <figure>
+                <img src="../images/beer.png" alt="beer-jar">
+            </figure>
+            <a class="btn btn-info" href="/beers" role="button">Check the beers!</a>
+            <a class="btn btn-info" href="/random-beer" role="button">Check a Random Beer!</a>
+        </div>
+    </div>
 </div>
