--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -6,6 +6,34 @@ grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
 
+body {
+    font-size: 1.5rem;
+}
+
+.navbar {
+    padding: 20px 20px 20px 40px;
+    box-shadow: 0 2px 6px 0 #9e9f9f;
+}
+
 footer {
-    padding: 10px;
+    padding: 20px;
+}
+
+.home img {
+    width: 65%;
+    margin: 0 0 30px 100px;
+}
+
+.home-beer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0;
+}
+
+.home-beer a {
+    padding: 10px 40px;
+    margin: 15px;
+    box-shadow: 0 2px 6px 0 #9e9f9f;
+    font-size: 1.5rem;
 }
