✨ add random beer view

--- a/views/random-beer.hbs
+++ b/views/random-beer.hbs
@@ -1,3 +1,10 @@
-<div>
-    Random beer
-</div>
+<article class="random beers">
+    <div class="random-image">
+        <img src="{{image_url}}" class="card-img-top" alt="beer-bottle">
+    </div>
+    <div class="card-body">
+        <h5>{{name}}</h5>
+        <p class="description">{{description}}</p>
+        <p>First Brewed: {{first_brewed}}</p>
+    </div>
+</article>
