--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -6,6 +6,11 @@ grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
 
+h2 {
+    text-align: center;
+    
+}
+
 .navbar {
     font-size: 1.5rem;
     padding: 20px 20px 20px 40px;
@@ -26,7 +31,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px 0;
+    margin: 70px 0;
 }
 
 .home-beer a {
@@ -38,7 +43,7 @@ footer {
 
 .beers {
     padding: 50px 0 100px 0;
-    text-align: center;
+    margin: 0 80.50px 0 80.50px;
 }
 
 .card {
@@ -52,7 +57,6 @@ footer {
     text-align: justify;
 }
 
-
 .card img {
     width: 40%;
     height: 300px;
@@ -60,4 +64,25 @@ footer {
     display: flex;
     align-self: center;
     padding: 15px;
+}
+
+.random {
+    display: flex;
+    justify-content: space-between;
+    padding: 121px 0;
+}
+
+.random-image {
+    width: 10%;
+    margin: 0 100px 100px 100px;
+}
+
+.random img {
+    width: 75%;
+    height: 300px;
+    
+}
+
+.random .card-body {
+    width: 80%;
 }
