♻️ refactor for reusing beer card partial

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -8,7 +8,10 @@ font-family: Arial, Helvetica, sans-serif;
 
 h2 {
     text-align: center;
-    
+}
+
+h5 {
+    padding-bottom: 20px;
 }
 
 .navbar {
@@ -51,6 +54,7 @@ footer {
     box-shadow: 0 2px 6px 0 #9e9f9f;
     padding: 15px;
     text-align: center;
+    width: 18rem;
 }
 
 .card .description {
