--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -2,7 +2,10 @@
     <h2>Beers list</h2>
     <div class="row">
         {{#each beers}}
-        {{>beerCard}}
+        <article class="card">
+            <img src="{{image_url}}" class="card-img-top" alt="beer-bottle">
+            {{>beerCard}}
+        </article>
         {{/each}}
     </div>
 </div>
