--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -49,6 +49,11 @@ footer {
     margin: 0 80.50px 0 80.50px;
 }
 
+.beers a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .card {
     margin: 50px;
     box-shadow: 0 2px 6px 0 #9e9f9f;
@@ -59,6 +64,11 @@ footer {
 
 .card .description {
     text-align: justify;
+}
+
+.card a {
+    display: flex;
+    flex-direction: column;
 }
 
 .card img {
