--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,8 +4,8 @@
             <figure>
                 <img src="../images/beer.png" alt="beer-jar">
             </figure>
-            <a class="btn btn-info" href="/beers" role="button">Check the beers!</a>
-            <a class="btn btn-info" href="/random-beer" role="button">Check a Random Beer!</a>
+            <a class="btn btn-success" href="/beers" role="button">Check the beers!</a>
+            <a class="btn btn-success" href="/random-beer" role="button">Check a Random Beer!</a>
         </div>
     </div>
 </div>
