--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-info">
+    <nav class="navbar navbar-expand-lg bg-success">
         <div class="container-fluid">
             <button class="navbar-toggler light" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -22,26 +22,26 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" style="color: #fff;" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/beers">Beers</a>
+                        <a class="nav-link active" aria-current="page" style="color: #fff;" href="/beers">Beers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/random-beer">Random Beer</a>
+                        <a class="nav-link active" aria-current="page" style="color: #fff;" href="/random-beer">Random Beer</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <footer class="footer fixed-bottom bg-info">
+    <main>
+        {{{body}}}
+    </main>
+    <footer class="footer bg-success" style="color: #fff;">
         <div class="container-fluid d-flex justify-content-center">
             <span>&copy; 2022 Abel Andrés</span>
         </div>
     </footer>
-    <main>
-        {{{body}}}
-    </main>
 </body>
 
 </html>
