--- a/views/partials/beerCardDetails.hbs
+++ b/views/partials/beerCardDetails.hbs
@@ -1,10 +1,12 @@
-<article class="random beers">
-    <div class="random-image">
-        <img src="{{image_url}}" class="card-img-top" alt="beer-bottle">
-    </div>
-    <div class="card-body">
-        {{>beerCard}}
-        <p>{{tagline}}</p>
-        <p>Abv: {{abv}}</p>
-    </div>
-</article>
+<div class="container">
+    <article class="random beers">
+        <div class="random-image">
+            <img src="{{image_url}}" class="card-img-top" alt="beer-bottle">
+        </div>
+        <div class="card-body">
+            {{>beerCard}}
+            <p>{{tagline}}</p>
+            <p>Abv: {{abv}}</p>
+        </div>
+    </article>
+</div>
